--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>C.J.Cline Portfolio</title>
  </head>
  <body>
   <div id="root"></div>
